<resources>
    <string name="app_name">SmilyHome</string>
    <string name="please_wait">Please wait…</string>
    <string name="back_press_msg">Press the back button again to Exit!!!</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="image_view_content_description">ImageView</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="msg_mandatory">This field is mandatory</string>
    <string name="msg_invalid_zip_code_length">Zip code length must be of 6 digits</string>
    <string name="not_valid_mobile_number">Please provide valid Mobile Number</string>
    <string name="error">Error</string>
    <string name="remember_me">Remember me</string>
    <string name="validate_otp">Validate OTP</string>
    <string name="zip_code">Zip Code</string>
    <string name="enter_6_digit_otp_here">Enter 6 digit OTP here</string>
    <string name="search">Search</string>
    <string name="top_hot_deals">Top Hot Deals</string>
    <string name="sample_category_name">Category Name</string>
    <string name="sample_category_desc">Rice is the seed of the grass species Oryza glaberrima (African rice) or Oryza sativa (Asian rice)</string>
    <string name="currency">₹</string>
    <string name="sample_currency">₹ 1050.00</string>
    <string name="buy">Buy</string>
    <string name="aaj_ka_offer">Aaj Ka Offer</string>
    <string name="shop_from_top_category">Shop From Top Category</string>
    <string name="super_saver_deals">Super Saver Deals</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="my_orders">My Order</string>
    <string name="my_cart"> My Cart</string>
    <string name="profile">Profile</string>
    <string name="description">Description</string>
    <string name="share_earn"><![CDATA[Share & Earn]]></string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="what_s_trending">What\'s Trending</string>
    <string name="featured_collection">Featured Collection</string>
    <string name="select_action">Select Action</string>
    <string name="select_category">Select Category</string>
    <string name="whats_s_new">Whats\'s New</string>
    <string name="gallery">Gallery</string>
    <string name="buy_more">Buy More</string>
    <string name="your_total_pay">Your Total Pay :</string>
    <string name="free_deliver_cash_on_delivery_available"><![CDATA[Free Deliver & Cash on Delivery available]]></string>
    <string name="product_detail">Product Detail</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="remove">Remove</string>
    <string name="you_pay">You Pay</string>
    <string name="quantity_s">Quantity(s)</string>
    <string name="discount">Discount</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="remove_product_msg">Do you want to remove this product?</string>
    <string name="product_features">Product Features</string>
    <string name="congratulations">Congratulations</string>
    <string name="order_summary">Order Summary</string>
    <string name="mrp">MRP</string>
    <string name="product_discount">Product Discount</string>
    <string name="my_earning_discount">My Earning Discount</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="select_address">Select Address</string>
    <string name="your_delivery_address">Your Delivery Address</string>
    <string name="add">Add</string>
    <string name="please_fill_your_address">Please Fill your Address</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="address">Address</string>
    <string name="add_address">Add Address</string>
    <string name="submit">Submit</string>
    <string name="change_address">Change Address</string>
    <string name="no_delivery_msg">Sorry, delivery isn\'t available</string>
    <string name="choose_payment_option">Choose Payment Option</string>
    <string name="google_pay">Google Pay</string>
    <string name="phone_pay">Phone Pay</string>
    <string name="paytm">Paytm</string>
    <string name="popular_options">Popular Options</string>
    <string name="pay_cash_on_delivery">Pay Cash on Delivery</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="pay_online">Pay Online</string>
    <string name="place_order">Place Order</string>
    <string name="your_order_is_placed">Your Order is placed</string>
    <string name="thank_you_for_shopping_with_us">Thank you for shopping with us</string>
    <string name="payment_method">Payment Method :</string>
    <string name="order_status">Order Status</string>
    <string name="order_id">Order ID</string>
    <string name="total_order_value">Total Order Value</string>
    <string name="pending_order">Pending Order</string>
    <string name="delivered_order">Delivered Order</string>
    <string name="cancelled_order">Cancelled Order</string>
    <string name="order_placed">Order Placed</string>
    <string name="total_item_s">Total Item(s)</string>
    <string name="delivered_item_s">Delivered item(s)</string>
    <string name="bag_id">Bag Id</string>
    <string name="view_details">View Details</string>
    <string name="order_detail">Order Detail</string>
    <string name="item_s_in_the_cart">Item(s) in the Cart</string>
    <string name="cancel_item">Cancel Item</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="cancel_item_message">Do you want to cancel this item?</string>
    <string name="msg_logout">Do you want to Logout?</string>
    <string name="unable_to_launch_play_store">Unable to launch Play Store</string>
    <string name="unable_to_share_application">Unable to Share Application</string>
    <string name="tnc"><![CDATA[Term & Conditions]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="update_address">Update Address</string>
    <string name="update_profile">Update profile</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="email_address">Email Address</string>
    <string name="program_and_feature"><![CDATA[Program & Features]]></string>
    <string name="survey">Survey</string>
    <string name="share_app">Share APP</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="err_msg_select_mode_of_payment">Please select one mode of payment</string>
</resources>