<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/ic_bottom_nav_menu"
        android:title="@string/menu" />
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_bottom_nav_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_bottom_nav_wallet"
        android:title="@string/my_cart" />
    <item
        android:id="@+id/nav_my_orders"
        android:icon="@drawable/ic_bottom_nav_cart"
        android:title="@string/my_orders" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_bottom_nav_profile"
        android:title="@string/profile" />

</menu>