<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="@dimen/_300sdp"
    android:padding="@dimen/_10sdp"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/add_address"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_20sdp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/HintText"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLength="@integer/name_length"
            android:textSize="@dimen/_12sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/HintText"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/address"
            android:inputType="text"
            android:maxLength="@integer/address_length"
            android:minLines="3"
            android:textSize="@dimen/_12sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/HintText"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/zipPinInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/zip_code"
            android:inputType="number"
            android:maxLength="@integer/zip_code_length"
            android:textSize="@dimen/_12sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/zipCodeCityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:visibility="gone"
        android:text="@string/add_address"
        android:textColor="@color/theme_green_dark"
        android:textSize="@dimen/_10sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_5sdp"
        android:layout_height="wrap_content"
        android:gravity="end">

        <TextView
            android:id="@+id/cancel"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/theme_green_dark"
            android:padding="@dimen/_5sdp"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/submit"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/theme_green_dark"
            android:padding="@dimen/_5sdp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>

</LinearLayout>