<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/login_bg"
    app:ignore="NamespaceTypo">

    <TextView
        android:id="@+id/updateAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/curve_green_selector"
        android:elevation="@dimen/_4sdp"
        android:onClick="onClick"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_8sdp"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_16sdp"
        app:targetApi="lollipop"
        card_view:layout_constraintEnd_toEndOf="@id/cardView"
        card_view:layout_constraintTop_toBottomOf="@id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:animateLayoutChanges="true"
        card_view:cardCornerRadius="@dimen/_10sdp"
        card_view:cardElevation="@dimen/_10sdp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_address"
                android:textColor="@color/dark_grey_bg"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:hintTextAppearance="@style/HintText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:maxLength="@integer/name_length" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:hintTextAppearance="@style/HintText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLength="@integer/mobile_length" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:hintTextAppearance="@style/HintText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:hint="@string/address"
                    android:inputType="textMultiLine"
                    android:maxLength="@integer/address_length" />

            </com.google.android.material.textfield.TextInputLayout>
            
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:hintTextAppearance="@style/HintText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/zipCodeInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:hint="@string/zip_code"
                    android:inputType="number"
                    android:maxLength="@integer/zip_code_length" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/zipCodeCityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:visibility="invisible"
                android:text="@string/add_address"
                android:textColor="@color/theme_green_dark"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>